# project

./: .gitignore
microservice/.k8s/: deployment.yml  mongodb.yml  redis.yml  secret.yml  service.yml
microservice/api/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
microservice/api/api/: __init__.py  auth.py  metrics.py  users.py  widgets.py
microservice/api/core/: cache.py  config.py  database.py  events.py  metrics.py  middleware.py  prometheus_middleware.py  rbac.py  security.py
microservice/api/models/: user.py  widget.py
microservice/api/schemas/: token.py  user.py  widget.py
microservice/api/utils/: sanitizer.py
